syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/agolosnichenko/golang-simplebank/simplebank/pb";

message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
    string full_name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
}